# opendrip

./: CMakeCache.txt  CMakeLists.txt  README.md  cloudcoverageservice.cpp  cloudcoverageservice.h  computation.cpp  computation.h  currentdataservicestate.cpp  currentdataservicestate.h  dataservice.cpp  dataservice.h  dataservicestate.cpp  dataservicestate.h  display24hoursdatastate.cpp  display24hoursdatastate.h  display4daysdatastate.cpp  display4daysdatastate.h  displaycloudcoverage.cpp  displaycloudcoverage.h  displaycurrentdatastate.cpp  displaycurrentdatastate.h  displayequipment.cpp  displayequipment.h  displayhumidity.cpp  displayhumidity.h  displayoutfit.cpp  displayoutfit.h  displayprecipitation.cpp  displayprecipitation.h  displaystate.cpp  displaystate.h  displaytemperature.cpp  displaytemperature.h  displaywindspeed.cpp  displaywindspeed.h  equipmentservice.cpp  equipmentservice.h  factory.cpp  factory.h  fourdaydataservicestate.cpp  (+25 more)
